correct the alignment

--- a/src/components/ProfilePage/ProfileItem/DashboardAll/Pages/DashboardPage/Dashboard.css
+++ b/src/components/ProfilePage/ProfileItem/DashboardAll/Pages/DashboardPage/Dashboard.css
@@ -1,5 +1,16 @@
 .main-dashboard-page {
-  padding: 0 20px;
+  padding: 20px;
+  /* max-width: 1000px; */
+}
+
+/* lap responsive */
+
+@media (max-width:1200px) {
+
+  .main-dashboard-page {
+    padding: 20px;
+    max-width: 700px;
+  }
 }
 
 .main-dashboard-page h1 {
@@ -34,9 +45,9 @@
     "consultation booking-rate booking-rate"
     "reviews booking-rate booking-rate"
     "schedule schedule schedule";
-    grid-template-columns: repeat(10fr,10fr,10fr);
+    grid-template-columns: repeat(1fr,1fr,1fr);
   grid-gap: 20px;
-  margin:5px 5px 30px 5px;
+  margin:5px 5px 10px 5px;
 }
 
 
@@ -152,7 +163,7 @@
 .income-head {
   grid-area: income-head;
   background: #FFFFFF;
-  padding: 20px 10px 0px 10px;
+  padding: 10px;
   border-radius: 10px;
   box-shadow: 0 0 10px #0000001A;
 }
@@ -166,13 +177,13 @@
 
 .income h2 {
   color: #272848;
-  font-size: 22px;
+  font-size: 18px;
   font-weight: 600;
   margin: 0;
 }
 
 .chart-select {
-  padding: 5px 10px;
+  padding: 5px 5px;
   background: #F7FAFF;
   border: 1px solid #CCCCCC;
   border-radius: 5px;
@@ -187,16 +198,17 @@
 }
 
 .chart-area {
- width: 415px;
+ width: 300px;
  height: 200px;
   margin-top: 80px;
+  margin-left: -20px;
 }
 
 @media (max-width: 768px) {
   .chart-area {
     margin-right: 0;
     height: 200px; 
-    margin-left: 80px;
+    margin-left: 140px;
     margin-top: 40px;
 }
 
@@ -214,7 +226,7 @@
 @media (max-width: 480px) {
 
   .chart-area {
-    margin-left: 30px;
+    margin-left: 80px;
   }
 }
 
@@ -229,7 +241,7 @@
 .profile {
   grid-area: profile;
   background: #FFFFFF;
-  padding: 40px;
+  padding: 35px;
   border-radius: 10px;
   text-align: center;
   box-shadow: 0 0 10px #0000001A;
@@ -259,7 +271,7 @@
 .dashboardprofile-logo {
   display: grid;
   grid-template-columns: repeat(3, auto);
-  gap: 60px; /* Adjust the gap as needed */
+  gap: 20px; /* Adjust the gap as needed */
   justify-content: center;
   align-items: start;
   margin-top: -15px;
@@ -283,26 +295,26 @@
 }
 
 .email {
-  width: 22px;
-  height: 22px;
+  width: 20px;
+  height: 20px;
   margin-top: 12px;
 }
 
 .workload{
-  width: 23px;
+  width: 20px;
   height: 20px;
   margin-top: 12px;
 }
 
 .Tick{
-  width: 22px;
-  height: 22px;
+  width: 20px;
+  height: 20px;
   margin-top: 12px;
 }
 
 .logo-name {
   /* font-family: Poppins; */
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 600;
   margin-top: 15px;
   width: 100px;
@@ -311,7 +323,7 @@
 
 .logo-count {
   /* font-family: Poppins; */
-  font-size: 12px;
+  font-size: 10px;
   font-weight: 400;
   color: #A0AAC8;
   margin-top: -15px;
@@ -344,7 +356,7 @@
 
 .consultation-count {
   /* font-family: Matter; */
-  font-size: 75px;
+  font-size: 40px;
   font-weight: 600;
   line-height: 70px;
   text-align: left;
@@ -358,7 +370,8 @@
   line-height: 27px;
   color: #FFFFFF;
   text-align: left;
- margin-left: 10px;
+ margin-left: 6px;
+ margin-top: -15px;
 
   
 }
@@ -372,10 +385,22 @@
 
 .consultation-img {
   margin-bottom: -20px;
-  width: 170px;
+  width: 110px;
   height: 150px;
   margin-left: 20px;
 }
+
+/* mobile responsive for consultation */
+@media (max-width: 768px) {
+
+  .consultation-img {
+    margin-bottom: -23px;
+    width: 170px;
+    height: 150px;
+    margin-left: 20px;
+  }
+}
+
 
 /*====================== consultation end =========End======================*/
 
@@ -403,7 +428,7 @@
 
 .reviews-count {
   /* font-family: Matter; */
-  font-size: 75px;
+  font-size: 40px;
   font-weight: 600;
   line-height: 90px;
   text-align: left;
@@ -418,7 +443,8 @@
   line-height: 27px;
   color: #FFFFFF;
   text-align: left;
-  
+  margin-top:-15px;
+  margin-right: -5px;  
 }
 
 .reviews-img-container {
@@ -429,8 +455,8 @@
 }
 
 .reviews-img {
-  width: 152px;
-  height: 132px;
+  width: 110px;
+  height: 130px;
 }
 
 /*====================== review end =========End======================*/
@@ -477,9 +503,9 @@
 
 .rate h1{
     /* font-family: Poppins; */
-font-size: 70px;
+font-size: 50px;
 font-weight: 600;
-line-height: 50px;
+line-height: 30px;
 text-align: left;
   color: #00A500;
 }
@@ -508,9 +534,11 @@ text-align: left;
   }
 
 .chart {
-  margin-top: 80px;
-  width: 460px;
-  height: 230px;
+  margin-top: 110px;
+width: 100%;  
+margin-left: 40px;
+height: 100%;
+/* height:130px; */
 }
 
 .recently{
